# bee_steamer

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: analysis.py  bee_server.py  detect_bees_density.py  stream.py  websocket_server.py
cloudflared/: config.yml
